# brv

./: .gitignore  CMakeLists.txt
assembly_testing/: test  test.py  test.s  tests.md
assembly_testing/imm_alu_inst/addi/: correct.json  gen_test.cpp  test.s
assembly_testing/imm_alu_inst/andi/: correct.json  gen_test.cpp  test.s
assembly_testing/imm_alu_inst/ori/: correct.json  gen_test.cpp  test.s
assembly_testing/imm_alu_inst/slli/: correct.json  gen_test.cpp  test.s
assembly_testing/imm_alu_inst/slti/: correct.json  gen_test.cpp  test.s
assembly_testing/imm_alu_inst/sltiu/: correct.json  gen_test.cpp  test.s
assembly_testing/imm_alu_inst/srai/: correct.json  gen_test.cpp  test.s
assembly_testing/imm_alu_inst/srli/: correct.json  gen_test.cpp  test.s
assembly_testing/imm_alu_inst/xori/: console.json  gen_test.cpp  linker.ld  test.s
assembly_testing/load_inst/lb/: correct.json  test.s
assembly_testing/load_inst/lbu/: correct.json  test.s
assembly_testing/load_inst/lh/: correct.json  test.s
assembly_testing/load_inst/lhu/: correct.json  test.s
assembly_testing/load_inst/lw/: correct.json  linker.ld  test.s
assembly_testing/upper_imm_inst/lui/: correct.json  gen_test.cpp  test.s
include/: cpu.hpp.old  encodings.hpp
src/: debug.cpp  debug.hpp  main.cpp  rv32_instr_pp_decode.cpp  rv32_instr_pp_decode.hpp  unions.hpp
